[package]
name = "build-array"
version = "0.1.1"
edition = "2021"
description = "Build an array dynamically without heap allocations."
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/build-array"
repository = "https://github.com/aatifsyed/build-array"
homepage = "https://crates.io/crates/build-array"

[dependencies]
arrayvec = { version = "0.7.4", default-features = false }

[features]
default = ["std"]
std = []
